--- a/README
+++ b/README
@@ -1,1 +1,3 @@
-![Preview](./images/p4-main.PNG)
+<p align="center">
+  <img src="./images/p4-main.png" width="600" alt="Fluxo Landing Page Preview">
+</p>
