--- a/README
+++ b/README
@@ -1,3 +1,3 @@
 <p align="center">
-  <img src="./images/p4-main.png" width="600" alt="Fluxo Landing Page Preview">
+  <img src="./preview.png" width="600" alt="Fluxo Landing Page Preview">
 </p>
