--- a/README
+++ b/README
@@ -1,5 +1,4 @@
-<div>
+
 <p align="center">
-  <img src="./preview.PNG" width="600" alt="Fluxo Landing Page Preview">
+  <img src="./preview.png" width="600" alt="Fluxo Landing Page Preview">
 </p>
-</div>
